2008-02-06  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcontainer.c
	* gtk/gtkexpander.c
	* gtk/gtkframe.c
	* gtk/gtklabel.c
	* gtk/gtkmain.c
	* gtk/gtkmenu.c
	* gtk/gtkmenuitem.c
	* gtk/gtkmenushell.c
	* gtk/gtknotebook.c
	* gtk/gtkseparatortoolitem.c
	* gtk/gtksocket.c
	* gtk/gtktextlayout.c
	* gtk/gtktoggletoolbutton.c
	* gtk/gtktoolbutton.c
	* gtk/gtktoolitem.c
	* gtk/gtktree.c
	* gtk/gtktreeitem.c: replace "foo && GTK_IS_FOO (foo)" by simply
	"GTK_IS_FOO (foo)".

2008-02-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkprintsettings.c (gtk_print_settings_get_page_ranges):
	Allow to store half-open ranges.

2008-02-05  Cody Russell  <bratsche@gnome.org>

	* gdk/win32/gdkwindow-win32.c (_gdk_modal_current): Walk
	down the stack until we get to a window that is mapped.
	Otherwise hiding a window will cause all windows in the app
	to be blocked. (#514643)

2008-02-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/updateiconcache.c: Ignore images in the toplevel theme
	directory, avoiding one source of invalid caches that has been
	spotted in the wild.

2008-02-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/updateiconcache.c: Fix the previous commit to compile.

2008-02-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/updateiconcache.c: Install a printerr handler that
	prepends the program name, since gtk-update-icon-cache output
	often appears in the middle of other output, e.g. rpm update logs.

2008-02-05  Cody Russell  <bratsche@gnome.org>

	* gdk/win32/gdkprivate-win32.h
	* gdk/win32/gdkevents-win32.c
	* gdk/win32/gdkwindow-win32.c
	* gdk/win32/gdkwindow-win32.h
	* gdk/win32/gdkwin32.h:
	Modal window rework.  (#455627 and #511111)

2008-02-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcombobox.c (gtk_combo_box_cell_layout_add_attribute):
	g_return_if_fail() if the cell is not part of the combo instead of
	crashing in the next line.

2008-02-01  Cody Russell  <cody@jhu.edu>

	* modules/engines/ms-windows/xp_theme.[ch]